--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
+    <div class="wrapper">
+        <div class="bg"> Bert 50 </div>
+        <div class="fg"> Bert 50 </div>
+    </div>
 
     <div class="grid-wrapper">
         <div>
