--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
         <div class="tall">
             <img src="foto/foto1.jpg" alt="" />
         </div>
-        <!-- 
+        
         <div>
-            <img src="https://images.unsplash.com/photo-1588414734732-660b07304ddb?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=675&amp;q=80" alt="" />
+            <img src="foto/foto10.jpg" alt="" />
         </div>
-        <div>
-            <img src="https://images.unsplash.com/photo-1588224575346-501f5880ef29?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=700&amp;q=80" alt="" />
+        <div class="tall">
+            <img src="foto/foto11.jpg" alt="" />
         </div>
-        <div>
-            <img src="https://images.unsplash.com/photo-1574798834926-b39501d8eda2?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=800&amp;q=80" alt="" />
+         
+        <div class="big">
+            <img src="foto/foto12.jpg" alt="" />
         </div>
+        <!--
         <div>
             <img src="https://images.unsplash.com/photo-1547234935-80c7145ec969?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1353&amp;q=80" alt="" />
         </div>
