--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         <div class="big">
             <img src="foto/foto12.jpg" alt="" />
         </div>
+        <div>
+            <img src="foto/foto13.jpg" alt="" />
+        </div>
+        <div class="tall">
+            <img src="foto/foto14.jpg" alt="" />
+        </div>
         <!--
         <div>
             <img src="https://images.unsplash.com/photo-1547234935-80c7145ec969?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1353&amp;q=80" alt="" />
